--- a/components/ContactSection/contactSection.module.css
+++ b/components/ContactSection/contactSection.module.css
@@ -5,13 +5,14 @@
   line-height: 1.5em;
   padding: 5rem 0;
   display: flex;
-  flex-direction: column;
+  flex-direction: column;  
   align-items: center;
   color: white;
 }
 
 .contactForm {
   width: 30%;
+  min-width: 18.75rem;
 }
 
 .contactFormTitle {
@@ -28,15 +29,6 @@
 }
 
 .formGroup {
-  display: flex;
-  align-items: center;
-}
-
-.iconPosition {
-  margin-left: 0.5em;
-}
-
-.buttonContent {
   display: flex;
   align-items: center;
 }
