Added favicon and tweaked percentages

--- a/components/SkillsSection/SkillBars/SkillBar/skillBar.module.css
+++ b/components/SkillsSection/SkillBars/SkillBar/skillBar.module.css
@@ -25,6 +25,7 @@
   background-color: #eee;
   color: #666;
   padding-right: 1rem;
+  padding-left: 1rem;
   text-align: right;
   display: flex;
   align-items: center;
